Fix loot table gen