@@ -1,8 +1,13 @@
 package uwu.juni.wetland_whimsy.data;
 
 import java.util.Collections;
+import java.util.Set;
+
+import com.google.common.collect.ImmutableList;
 
 import uwu.juni.wetland_whimsy.WetlandWhimsy;
+import uwu.juni.wetland_whimsy.data.sub_providers.WetlandWhimsyBlockLootDatagen;
+import uwu.juni.wetland_whimsy.data.sub_providers.WetlandWhimsyVaultLootDatagen;
 import uwu.juni.wetland_whimsy.data.tags.WetlandWhimsyBiomeTagsDatagen;
 import uwu.juni.wetland_whimsy.data.tags.WetlandWhimsyBlockTagsDatagen;
 import uwu.juni.wetland_whimsy.data.tags.WetlandWhimsyItemTagsDatagen;
@@ -11,6 +16,8 @@ import uwu.juni.wetland_whimsy.data.worldgen.WetlandWhimsyBiomesDatagen;
 import uwu.juni.wetland_whimsy.data.worldgen.WetlandWhimsyPlacedFeaturesDatagen;
 import net.minecraft.core.RegistrySetBuilder;
 import net.minecraft.core.registries.Registries;
+import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraftforge.common.data.DatapackBuiltinEntriesProvider;
 import net.minecraftforge.data.event.GatherDataEvent;
 
@@ -56,12 +63,12 @@ public class Datagen {
 		datagen.addProvider(event.includeServer(), new WetlandWhimsyBiomeTagsDatagen(output, lookupProvider, fileHelper));
 
 		// Loot tables
-/* 		datagen.addProvider(
+		datagen.addProvider(
 			event.includeServer(),
 			new LootTableProvider(
 				output, 
 				Set.of(), 
-				List.of(
+				ImmutableList.of(
 					new LootTableProvider.SubProviderEntry(
 						WetlandWhimsyBlockLootDatagen::new,
 						LootContextParamSets.BLOCK
@@ -70,9 +77,8 @@ public class Datagen {
 						WetlandWhimsyVaultLootDatagen::new,
 						LootContextParamSets.CHEST
 					)
-				), 
-				event.getLookupProvider()
+				)
 			)
-		);*/
+		);
 	}
 }
